--- a/src/App.css
+++ b/src/App.css
@@ -42,6 +42,12 @@ body {
   font-family: "Roboto", Arial, Helvetica, sans-serif;
   color: #000000;
 }
+.loud {
+  font-size: 38px;
+  line-height: 12px;
+  margin-top: 20%;
+  margin-left: 45%;
+}
 
 .wrapper {
   max-width: 100%;
@@ -996,6 +1002,12 @@ body {
   .pop-browse__wrap {
     display: block;
   }
+  .loud {
+    font-size: 16px;
+    line-height: 12px;
+    margin-top: 40%;
+    margin-left: 45%;
+  }
 }
 @media screen and (max-width: 495px) {
   .container {
@@ -1085,5 +1097,11 @@ body {
   }
   .pop-exit__form-group {
     display: block;
+  }
+  .loud {
+    font-size: 16px;
+    line-height: 12px;
+    margin-top: 40%;
+    margin-left: 40%;
   }
 }
